# sanctra-rag-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
.sanctra/: ATTRIBUTIONS.md  CONTRIBUTING.md
app/: main.py  rag.py
