[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sanctra-rag-service"
version = "0.1.0"
description = "FastAPI wrapper around Vertex AI Vector Search with person_id scoping."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "google-cloud-aiplatform>=1.66.0",
  "google-auth>=2.31.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "python-dotenv>=1.0.1"
]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]
